--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     }
   ],
   "require": {
-    "phpunit/phpunit": "9.4.3"
+    "phpunit/phpunit": "9.4.3",
+    "ext-json": "*",
+    "ext-pgsql": "*"
   }
 }
